# gforms_discord_verification_bot

./: .gitignore  Cargo.toml
migrations/: 20220425161150_form.sql
src/: bot.rs  main.rs  structs.rs
